Bug 1614831 - Speed up the transmission of permissions to content processes upon navigation; r=baku

Differential Revision: https://phabricator.services.mozilla.com/D63674